<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/welcome_msg"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
	<ImageButton
        android:id="@+id/mozartImageButton"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:contentDescription="@string/tapTempoContent"
        android:gravity="center_vertical|center_horizontal"
        android:scaleType="fitXY"
        android:src="@drawable/ic_mozart" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:text="@string/start_msg"
        android:onClick="AcquireTempo" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:text="@string/exit_msg"
        android:onClick="exitMain" />

</LinearLayout>